[project]
name = "dj-playlist-organizer"
version = "0.1.0"
description = "Intelligent DJ playlist organizer based on Spotify listening history"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
